# kepler-mcp-gitlab-server

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  TEST_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.dev.yml
scripts/: build.sh  clean.sh  lint.sh  run.sh  secscan.sh  status.sh  typecheck.sh
servers/: sample_server.py
src/kepler_mcp_gitlab/: __init__.py  application.py  cli.py  config.py  context.py  logging_config.py  rate_limit.py  security.py  server.py  transport.py
src/kepler_mcp_gitlab/gitlab/: __init__.py  client.py  exceptions.py
src/kepler_mcp_gitlab/oauth/: __init__.py  flows.py  pkce.py  session.py  token_store.py
src/kepler_mcp_gitlab/tools/: __init__.py  base.py  health.py  info.py  issues.py  merge_requests.py  projects.py  repository.py
tests/: __init__.py  conftest.py  test_config.py  test_logging_config.py  test_rate_limit.py  test_security.py  test_server.py  test_transport.py
tests/gitlab/: __init__.py  test_client.py  test_exceptions.py
tests/oauth/: __init__.py  test_flows.py  test_pkce.py  test_session.py  test_token_store.py
tests/tools/: test_health.py  test_info.py  test_repository.py
